--- a/styles/global.css
+++ b/styles/global.css
@@ -54,12 +54,14 @@ input {
   justify-content: center;
 }
 .button {
+  width: 70%;
   font-size: 1.8rem;
   padding: 1rem;
   border-radius: 1rem;
   background-color: #000;
   color: white;
   cursor: pointer;
+  margin: 0 auto;
 }
 
 .inline {
