--- a/styles/global.css
+++ b/styles/global.css
@@ -29,20 +29,33 @@ header {
 }
 
 h1 {
-  font-size: 3.5rem;
-  padding-block: 1rem;
+  font-size: 2.6rem;
+  padding: 1rem;
   text-align: center;
 }
+
+h2 {
+  font-size: 2.2rem;
+  text-align: center;
+  padding: 1rem;
+}
+
 h3 {
-  font-size: 2rem;
+  font-size: 1.8rem;
+  text-align: center;
+  padding: 1rem;
+}
+p {
+  font-size: 1.8rem;
+  padding: 1rem;
 }
 input {
-  padding: 1rem;
+  padding: 0.5rem;
   border: none;
 }
 
 .wrapper {
-  width: 37.5rem;
+  width: 35.5rem;
   margin: 0 auto;
 }
 
@@ -70,7 +83,6 @@ input {
 }
 
 .verticalLine {
-
   width: 2px;
   background-color: white;
 }
